--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,13 @@
 {
   "short_name": "React App",
   "name": "Create React App Sample",
-  "icons": [],
+  "icons": [
+    {
+    "src": "icon-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }
+  ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
